[gd_scene load_steps=2 format=3 uid="uid://b65cb02b2a36d"]

[ext_resource type="Script" uid="uid://caonq7lmorpyx" path="res://scenes/input/gamepad_input/gamepad_input_demo.gd" id="1_gamepad"]

[node name="Main" type="Node2D"]
script = ExtResource("1_gamepad")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(400, 300)

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
color = Color(0, 1, 1, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="GamepadPanel" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_right = -20.0
offset_bottom = 350.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GamepadPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="GamepadStatus" type="Label" parent="UI/GamepadPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "üéÆ No gamepad connected"

[node name="AnalogStatus" type="Label" parent="UI/GamepadPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 1, 1)
text = "Left Stick: (0.0, 0.0)"

[node name="RightAnalogStatus" type="Label" parent="UI/GamepadPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 1, 1)
text = "Right Stick: (0.0, 0.0)"

[node name="TriggerStatus" type="Label" parent="UI/GamepadPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
text = "Triggers: L:0.0 R:0.0"

[node name="ButtonStatus" type="Label" parent="UI/GamepadPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.8, 1)
text = "Buttons: None pressed"

[node name="VibrationInfo" type="Label" parent="UI/GamepadPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)
text = "Vibration: Press A/Cross to test"

[node name="DeadzoneInfo" type="Label" parent="UI/GamepadPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Deadzone: 0.2"

[node name="ControlPanel" type="Panel" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -150.0
offset_right = 350.0
offset_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeadzoneContainer" type="HBoxContainer" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="DeadzoneLabel" type="Label" parent="UI/ControlPanel/VBoxContainer/DeadzoneContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Deadzone:"

[node name="DeadzoneSlider" type="HSlider" parent="UI/ControlPanel/VBoxContainer/DeadzoneContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 0.5
step = 0.05
value = 0.2

[node name="Instructions" type="Label" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "Left Stick: Move | Right Stick: Rotate | A/Cross: Vibrate | Start: Reset"
vertical_alignment = 2

[node name="WebGamepadInfo" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 320.0
offset_right = -10.0
offset_bottom = 370.0
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
text = "üåê Web: Press any gamepad button to detect"
horizontal_alignment = 2
vertical_alignment = 1
